GS-2906 fixed spacing (#2077)

--- a/styles/Groupshop.module.scss
+++ b/styles/Groupshop.module.scss
@@ -1116,6 +1116,7 @@ $font-family-sans-serif: "DM Sans", Fahkwang, system-ui, -apple-system,
         color: #000000;
         @include media-breakpoint-down(sm) {
           font-size: 10px !important;
+          margin-top: 0px!important;
         }
       }
 
